# flight-planner

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FlightPlanner.wxs  INSTALL.md  LICENSE  Makefile  README.md  REFACTORING_NOTES.md  STATISTICS_FEATURE.md  USER_INSTALL.md  WIX_README.md  aircraft-45.csv  aircrafts.csv  analyze_airport_database.py  analyze_flight_log.py  build.rs  build_msi.bat  com.github.daan.flight-planner.desktop  coverage.ps1  diesel.toml  index.html  install.bat  install.ps1  install.sh  install_system.sh  install_user.sh  requirements.txt  uninstall.bat  uninstall.ps1  uninstall.sh  verify_max  verify_max.rs
.Jules/: bolt.md  palette.md
.agents/: AGENTS.md
.github/: dependabot.yml
.github/actions/build-msi/: action.yml
.github/workflows/: audit.yml  build-installer.yml  coverage.yml  release.yml  rust.yml
.jules/: architect.md  bolt.md  palette.md  testpilot.md
examples/: baseline_benchmark.rs  benchmark.rs  mock_data.rs  performance_benchmark.rs
examples/benchmark/: mock_data.rs
migrations/2024-11-18-150108_create_aircraft/: down.sql  up.sql
migrations/2024-11-18-220309_setup/: down.sql  up.sql
migrations/2024-11-19-122512_added_takeoff_distance/: down.sql  up.sql
migrations/2025-08-19-000144_add_distance_to_history/: down.sql  up.sql
migrations/2025-10-05-100000_update_husky_range/: down.sql  up.sql
migrations/2025-11-19-092400_create_metar_cache/: down.sql  up.sql
migrations/2025-11-19-100244_add_observation_dt_to_metar_cache/: down.sql  up.sql
migrations/2025-11-19-125200-0000_create_settings_table/: up.sql
migrations_aircraft_database/setup/: down.sql  up.sql
migrations_airport_database/setup/: down.sql  up.sql
src/: cli.rs  console.rs  console_utils.rs  database.rs  database_warning.rs  date_utils.rs  errors.rs  gui.rs  lib.rs  main.rs  models.rs  schema.rs  schema_2.rs  test.rs  test_helpers.rs  traits.rs  util.rs
src/gui/: aircraft_selection.rs  buttons.rs  events.rs  icons.rs  mod.rs  search_bar.rs  state.rs  styles.rs  table.rs  ui.rs  ui_simplified.rs
src/gui/components/: action_buttons.rs  add_history_popup.rs  buttons.rs  common.rs  departure.rs  dropdowns.rs  globe.rs  mod.rs  popup.rs  route_popup.rs  search.rs  search_controls.rs  searchable_dropdown.rs  selection_controls.rs  settings_popup.rs  table.rs  table_display.rs  toast.rs  unified_selection.rs  weather_controls.rs
src/gui/components/globe/: camera.rs  interaction.rs  math.rs  mod.rs  providers.rs  renderer.rs  state.rs  tile_grid.rs  tile_manager.rs
src/gui/data/: list_items.rs  mod.rs  table_items.rs
src/gui/services/: aircraft_service.rs  airport_service.rs  app_service.rs  history_service.rs  mod.rs  popup_service.rs  route_popup_service.rs  route_service.rs  search_service.rs  validation_service.rs  view_mode_service.rs  weather_service.rs
src/gui/state/: app_state.rs  mod.rs  popup_state.rs  search_state.rs  ui_state.rs
src/models/: aircraft.rs  airport.rs  history.rs  history_response.rs  mod.rs  route.rs  runway.rs  setting.rs  statistics.rs  weather.rs
src/modules/: aircraft.rs  airport.rs  data_operations.rs  history.rs  http.rs  mod.rs  routes.rs  runway.rs  weather.rs
src/server/: mod.rs
src/test/: database_connection_stub.rs  test.rs
src/web/: api_client.rs  app_service.rs  mod.rs  services.rs  weather_service.rs
test_migration/2024-11-18-220309_setup/: down.sql  up.sql
tests/: aircraft_tests.rs  airport_tests.rs  cli_tests.rs  data_operations_tests.rs  database_tests.rs  date_utils_tests.rs  errors_tests.rs  gui_ui_tests.rs  history_tests.rs  lib.rs  lib_tests.rs  main_tests.rs  migration_test.rs  optimization_tests.rs  route_generation_correctness_test.rs  routes_tests.rs  rtree_tests.rs  runway_tests.rs  search_integration_tests.rs  table_items_tests.rs  test_helpers.rs  test_history.rs  test_routes.rs  test_runway.rs  test_util.rs  util_tests.rs  weather.rs  weather_api_test.rs  weather_integration_test.rs  weather_tests.rs
tests/common/: mod.rs
tests/gui/: helpers.rs  main.rs  reset_confirm_tests.rs  route_generation_correctness_test.rs  routes_tests.rs  scroll_logic_tests.rs  search_integration_tests.rs  settings_tests.rs  table_items_tests.rs  ui_logic_tests.rs  ui_tests.rs  weather_integration_test.rs  weather_integration_tests.rs  weather_service_tests.rs  weather_tests.rs
tests/gui/services/: mod.rs  test_aircraft_service.rs  test_airport_service.rs  test_app_service.rs  test_history_service.rs  test_popup_service.rs  test_route_service.rs  test_search_service.rs  test_services_container.rs  test_validation_service.rs
tests/gui_services/: app_service_tests.rs  mod.rs  search_service_tests.rs  test_airport_service.rs  test_app_service.rs  test_history_service.rs  test_popup_service.rs  test_route_service.rs  test_search_service.rs  test_validation_service.rs  test_view_mode_service.rs
tests/modules/: test_airport.rs  test_runway.rs
