[package]
name = "flight_planner"
version = "1.0.22"
edition = "2024"
build = "build.rs"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
chrono = "^0.4"
console = "^0.16"
log = "^0.4"
diesel = { version = "^2.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "^2.3"
r2d2 = "^0.8"
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
egui = { version = "^0.33", optional = true }
egui_extras = { version = "^0.33", optional = true }
eframe = { version = "^0.33", features = ["wgpu"], optional = true }
rayon = "^1.11"
rand = "^0.9"
image = { version = "^0.25", optional = true }
rstar = "^0.12"
log4rs = "^1.3"
dirs = "^6.0"
csv = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = { version = "^0.13", features = ["blocking", "json"] }
dotenv = "0.15"

[dev-dependencies]
httpmock = "^0.8.0"
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
serial_test = "3.3.1"
tokio = { version = "^1.49", features = ["full"] }

[features]
default = ["gui"]
gui = ["dep:egui", "dep:egui_extras", "dep:eframe", "dep:image"]

[[example]]
name = "benchmark"
required-features = ["gui"]

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
