[package]
name = "flight_planner"
version = "1.0.23"
edition = "2024"
build = "build.rs"

[lib]
name = "flight_planner"
crate-type = ["cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
chrono = "^0.4"
csv = "^1.4"
egui-phosphor = "0.12.0"
log = "^0.4"
rand = "0.10.1"
serde = { version = "^1.0", features = ["derive", "rc"] }
urlencoding = "2.1.3"
web-time = "1"

# Optional GUI deps (desktop)
dotenvy = { version = "0.15", optional = true }
eframe = { version = "^0.34.2", features = ["wgpu"], optional = true }
egui = { version = "^0.34.1", optional = true }
egui_extras = { version = "^0.34.2", optional = true }
image = { version = "^0.25", optional = true }
rayon = { version = "^1.12", optional = true }
reqwest = { version = "^0.13", features = ["blocking", "json"], optional = true }
rstar = { version = "^0.12", optional = true }
serde_json = { version = "^1.0", optional = true }

# Optional server deps
axum = { version = "^0.8", optional = true, features = ["json", "macros"] }
tokio = { version = "^1.52", optional = true, features = ["full"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["fs", "cors"] }

# Native-only deps (not available on wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
console = "^0.16"
diesel = { version = "^2.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "^2.3"
dirs = "^6.0"
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
log4rs = "^1.3"
r2d2 = "^0.8"

# WASM-only deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
getrandom = { version = "0.2", features = ["js"] }
getrandom4 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
reqwest = { version = "^0.13", default-features = false, features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element", "Location"] }

[dev-dependencies]
diesel_migrations = { version = "2.3.2", features = ["sqlite"] }
httpmock = "^0.8.3"
serial_test = "3.4.0"
tokio = { version = "^1.52", features = ["full"] }

[features]
default = ["gui"]
gui = ["dep:egui", "dep:egui_extras", "dep:eframe", "dep:image", "dep:rayon", "dep:reqwest", "dep:rstar", "dep:serde_json", "dep:dotenvy"]
web = ["dep:egui", "dep:egui_extras", "dep:eframe", "dep:image", "dep:serde_json", "dep:rstar"]
server = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:serde_json"]

[[bin]]
name = "flight_planner"
required-features = ["gui"]

[[example]]
name = "benchmark"
required-features = ["gui"]

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
